--- a/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
@@ -16,7 +16,7 @@
             <ion-label>{{'Dashboard.Menu.Home'| translate}}</ion-label>
           </ion-item>
 
-          <ion-item lines="none" routerLink="/dashboard/tabs/notification">
+          <!-- <ion-item lines="none" routerLink="/dashboard/tabs/notification">
             <ion-icon name="notifications-outline" slot="start"></ion-icon>
             <ion-label>Notification</ion-label>
           </ion-item>
@@ -24,7 +24,7 @@
           <ion-item lines="none" routerLink="/dashboard/tabs/card">
             <ion-icon name="card" slot="start"></ion-icon>
             <ion-label>Card</ion-label>
-          </ion-item>
+          </ion-item> -->
 
           <ion-item lines="none" routerLink="/dashboard/tabs/profile">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
@@ -48,13 +48,13 @@
         <ion-icon name="home"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab="notification">
+      <!-- <ion-tab-button tab="notification">
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-tab-button>
 
       <ion-tab-button tab="card">
         <ion-icon name="card"></ion-icon>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <ion-tab-button tab="profile">
         <ion-icon name="person-circle-outline"></ion-icon>
