--- a/Green_S9_Group_project/src/app/dashboard/home/home.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/home.page.html
@@ -12,55 +12,57 @@
   </ion-toolbar>
 </ion-header>
 
-
-
 <ion-content>
   <ion-grid>
-        <ion-card class="cardStyle">
-          <ion-item lines="none">
-            <p style="font-weight: 500; color: white; margin-top: 15px">
-              {{"Dashboard.Home.Today's_Report" | translate}}
-            </p>
-            <ion-label id="date" slot="end"
-              >{{ todayDate | date: "EEE dd MMM"}}</ion-label
-            >
-          </ion-item>
-      
+    <ion-card class="cardStyle">
+      <ion-item lines="none">
+        <p style="font-weight: 500; color: white; margin-top: 15px">
+          {{"Dashboard.Home.Today's_Report" | translate}}
+        </p>
+        <ion-label id="date" slot="end"
+          >{{ todayDate | date: "EEE dd MMM"}}</ion-label
+        >
+      </ion-item>
 
-          <ion-item lines="none">
-            <span id="temp"> {{(weatherTemp - 273.15).toFixed(0)}} </span>
-            <span
-              style="font-size: 1.3em; font-weight: bold; color: #f59e0b; margin-bottom: 25px;">o</span>
-            <img slot="end" width="140px" height="140px" [src]="weatherIcon" />
-          </ion-item>
+      <ion-item lines="none">
+        <span id="temp"> {{(weatherTemp - 273.15).toFixed(0)}} </span>
+        <span
+          style="
+            font-size: 1.3em;
+            font-weight: bold;
+            color: #f59e0b;
+            margin-bottom: 25px;
+          "
+          >o</span
+        >
+        <img slot="end" width="140px" height="140px" [src]="weatherIcon" />
+      </ion-item>
 
- 
+      <ion-item lines="none">
+        <ion-icon id="locationIcon" name="location"></ion-icon>
+        <span style="font-size: 2em">{{cityName}}</span>
+      </ion-item>
 
-          <ion-item lines="none">
-            <ion-icon id="locationIcon" name="location"></ion-icon>
-            <span style="font-size: 2em">{{cityName}}</span>
-          </ion-item>
+      <ion-item lines="none">
+        <span>{{"Dashboard.Home.Maximum_Temp" | translate}}</span>
+        <span slot="end">{{(max_temp - 273.15).toFixed(0)}}℃</span>
+      </ion-item>
 
-          <ion-item lines="none">
-            <span>{{"Dashboard.Home.Maximum_Temp" | translate}}</span>
-            <span slot="end">{{(max_temp - 273.15).toFixed(0)}}℃</span>
-          </ion-item>
+      <ion-item lines="none">
+        <span>Minimum Temp</span>
+        <!--<span>{{"Dashboard.Home.Minimun_Temp" | translate}}</span>-->
+        <span slot="end">{{(min_temp - 273.15).toFixed(0)}}℃</span>
+      </ion-item>
 
-          <ion-item lines="none">
-            <span>Minimum Temp</span>
-            <!--<span>{{"Dashboard.Home.Minimun_Temp" | translate}}</span>-->
-            <span slot="end">{{(min_temp - 273.15).toFixed(0)}}℃</span>
-          </ion-item>
-
-          <ion-item lines="none">
-            <span>{{"Dashboard.Home.Humidity" | translate}}</span>
-            <span slot="end">{{humidity}}%</span>
-          </ion-item>
-          <ion-item>
-            <span>{{"Dashboard.Home.Wind_Speed" | translate}}</span>
-            <span slot="end">{{windSpeed}}m/s</span>
-          </ion-item>
-        </ion-card>
+      <ion-item lines="none">
+        <span>{{"Dashboard.Home.Humidity" | translate}}</span>
+        <span slot="end">{{humidity}}%</span>
+      </ion-item>
+      <ion-item>
+        <span>{{"Dashboard.Home.Wind_Speed" | translate}}</span>
+        <span slot="end">{{windSpeed}}m/s</span>
+      </ion-item>
+    </ion-card>
 
     <ion-row>
       <h2 class="text-center">
@@ -69,7 +71,10 @@
     </ion-row>
     <ion-row class="crop-card-row">
       <ion-col size-sm="1" *ngFor="let crop of crops">
-        <ion-card class="crop-card" [routerLink]="['/dashboard','tabs','home',crop.name]">
+        <ion-card
+          class="crop-card"
+          [routerLink]="['/dashboard','tabs','home',crop.name]"
+        >
           <ion-img [src]="crop.img"></ion-img>
           <ion-card-title>
             {{ "Dashboard.Home.Crops." + crop.name | translate}}
@@ -77,20 +82,6 @@
         </ion-card>
       </ion-col>
     </ion-row>
-    
-
-    
-    <ion-row>
-      <ion-col size="11.5">
-        <ion-item>
-          <ion-card class="doubts">
-            <h2>To Clarify Your Doubts</h2>
-          </ion-card>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-
-
   </ion-grid>
 </ion-content>
 <!-- //phrase email and password
