--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
@@ -35,7 +35,6 @@
       </ion-col>
     </ion-row>
 
-
     <ion-row>
       <ion-col class="img">
         <ion-toolbar color="primary" class="sawbar"> </ion-toolbar>
@@ -47,20 +46,12 @@
             >
               <p>{{saw.information}}</p>
             </ion-item>
-            
-            <ion-item-options side="end">
-              <ion-item-option color="primary">
-                <ion-icon
-                  name="create-outline"
-                  slot="icon-only"
-                ></ion-icon>
-                <!-- [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','edit',saw.tipsId]" -->
-
-              </ion-item-option>
-            </ion-item-options>
 
             <ion-item-options side="start">
-              <ion-item-option color="danger" (click)="deleteTip(saw.tipsId,item)">
+              <ion-item-option
+                color="danger"
+                (click)="deleteTip(saw.tipsId,item)"
+              >
                 <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
